Added basic HTML + CSS

--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>Contact us</h1>
     <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com" title="contact us"
+        >hello@croissant.com</a
+      >
+      for more info
     </p>
     <footer>
       <a href="/">Homepage</a>
