--- a/photo.html
+++ b/photo.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
-    <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
+    <h1>A picture of a croissant</h1>
+    <img
+      src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
+      alt="croissant"
+    />
     <footer>
       <a href="/">Homepage</a>
       <a href="/photo.html">Photo</a>
