updated SEO meta tags

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
+    <meta
+      name="description"
+      content="Welcome to Croissant.com, the website dedicated to the famous pastry."
+    />
+    <title>
+      🥐 Croissant - a website dedicated to croissant | Croissant.com
+    </title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>🥐 Croissant - a website dedicated to croissant</h1>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       named for its historical crescent shape. Croissants and other viennoiserie
