--- a/photo.html
+++ b/photo.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Beautiful photo of a delicious croissant. See it on Croissant.com"
+    />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
