--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get in touch! Contact us through our page and ask us anything."
+    />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title>Contact page</title>
   </head>
   <body>
     <h1>Contact us</h1>
